feat: #47 - 旅の開始日時と終了日時を出力するAPIの作成
