# backend/pkg/server/infra/persistence/img/persistence.go
@@ -2,7 +2,9 @@ package img
 
 import (
 	"database/sql"
+	"fmt"
 	"log"
+	"time"
 
 	model "github.com/littletake/supporterz_hackathon_2021/pkg/server/domain/model/img"
 	repo "github.com/littletake/supporterz_hackathon_2021/pkg/server/domain/repository/img"
@@ -37,6 +39,25 @@ func (ip imgPersistence) InsertImg(img *model.Img, tx *sql.Tx) error {
 	return err
 }
 
+func (ip imgPersistence) SelectDatesByTripID(trip_id string) ([]*time.Time, error) {
+	// 開始日時の取得
+	row := ip.db.QueryRow("SELECT date_time FROM img_table WHERE trip_id = ? ORDER BY date_time LIMIT 1", trip_id)
+	fmt.Print(row)
+	start_date, err := convertToTime(row)
+	if err != nil {
+		return nil, err
+	}
+	// 終了日時の取得
+	row = ip.db.QueryRow("SELECT date_time FROM img_table WHERE trip_id = ? ORDER BY date_time DESC LIMIT 1", trip_id)
+	fmt.Print(row)
+	end_date, err := convertToTime(row)
+	if err != nil {
+		return nil, err
+	}
+	dateSlice := [...]*time.Time{start_date, end_date}
+	return dateSlice[:], nil
+}
+
 // rowデータをImgデータへ変換する
 func convertToImgs(rows *sql.Rows) ([]*model.Img, error) {
 	imgs := []*model.Img{}
@@ -64,4 +85,18 @@ func convertToImgs(rows *sql.Rows) ([]*model.Img, error) {
 		return nil, err
 	}
 	return imgs, nil
+}
+
+// rowデータをtime.Timeへ変換
+func convertToTime(row *sql.Row) (*time.Time, error) {
+	date := &time.Time{}
+	err := row.Scan(date)
+	if err != nil {
+		if err == sql.ErrNoRows {
+			return nil, nil
+		}
+		log.Println(err)
+		return nil, err
+	}
+	return date, nil
 }
